--- a/index.html
+++ b/index.html
@@ -1025,5 +1025,6 @@
       </div>
     </section>
     <script src="fontawesome-free-5.13.0-web/js/all.js"></script>
+    <script src="js/site.js"></script>
   </body>
 </html>
