--- a/index.html
+++ b/index.html
@@ -3,22 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <link rel="stylesheet" href="styles/css/style.css" />
     <title>Menu</title>
   </head>
   <body>
     <div class="menu">
       <div class="navigation">
+        <div class="menu-expand">
+          <button data-toggle="collapse" data-target="#menu"><i class="fas fa-bars"></i></button>
+        </div>
+
         <div class="annotation">
+          <button id="annotation-button" data-target="#annotation">
           <i class="fas fa-comment-alt"></i>
+        </button>
+
         </div>
         <div class="basket">
+          <button id="basket" data-target="#order">
           <i class="fas fa-shopping-basket"></i>
+        </button>
+
         </div>
       </div>
       <div class="menu-card">
         <div class="menu-navigation">
-          <nav class="menu-nav" id="menu">
+          <nav class="menu-nav collapse" id="menu">
             <ul>
               <li>
                 <a class="category-selector active" data-target="#starters"
@@ -54,7 +66,7 @@
           </nav>
         </div>
         <div class="wrapper">
-          <div class="container">
+          <div class=" ">
             <div class="categories">
               <div id="starters" class="category active">
                 <div class="header">
@@ -1192,7 +1204,7 @@
           </div>
           <div class="alergens">
             <button data-target="#alergens" class="collapsible">
-              Lista alergenów znajduje się tutaj
+              <i class="fas fa-chevron-right"></i>Lista alergenów znajduje się tutaj
             </button>
             <div id="alergens" class="hidden">
               <h3>Alergeny w produktach</h3>
@@ -1241,10 +1253,86 @@
           </div>
         </div>
       </div>
-      <div class="order"></div>
-    </div>
+      <div id="order" class="order">
+        <div class="close">
+          <button>
+            <i class="fas fa-times"></i>
 
+          </button>
+        </div>
+        <div class="container">
+        <h3>Twoje zamówienie</h3>
+        <div class="order-items">
+          <div class="order-item">
+            <div class="name"><span>Hawai</span></div>
+            <div class="times">
+              <i class="fas fa-times"></i>
+              <div class="count"><span>2</span></div>
+            </div>
+            <div class="edit">
+              <button>
+                <i class="fas fa-edit"></i>
+              </button>
+              <button>
+                <i class="fas fa-times-circle"></i>
+              </button>
+            </div>
+            <div class="value"><span>37.80 zł</span></div>
+          </div>
+          <div class="order-item">
+            <div class="name"><span>Margherita</span></div>
+            <div class="times">
+              <i class="fas fa-times"></i>
+              <div class="count"><span>2</span></div>
+            </div>
+            <div class="edit">
+              <button>
+                <i class="fas fa-edit"></i>
+              </button>
+              <button>
+                <i class="fas fa-times-circle"></i>
+              </button>
+            </div>
+            <div class="value"><span>33.80 zł</span></div>
+          </div>
+        </div>
+        <div class="summary">
+          <p class="total">Zamówienie razem: <span>71.60 zł</span></p>
+          <p class="discount">Rabat: <span>0.00 zł</span></p>
+          <p class="total-to-pay">
+            Razem do zapłaty: <span>71.60 zł</span>
+          </p>
+          <div class="order-button">
+            <button class="save">Zamawiam</button>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div id="annotation" class="annotations">
+        <div class="close">
+          <button>
+            <i class="fas fa-times"></i>
+
+          </button>
+        </div>
+        <div class="container">
+        <h3>Uwagi do zamówienia</h3>
+        <div class="content">
+          <textarea name="notes" id="notes" cols="30" rows="10">
+
+          </textarea>
+        </div>
+        <div class="save-button">
+          <button class="save">
+            Zapisz
+          </button>
+        </div>
+      </div>
+      </div>
     <script src="fontawesome-free-5.13.0-web/js/all.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="js/site.js"></script>
   </body>
 </html>
