--- a/index.html
+++ b/index.html
@@ -3,29 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles/css/style.css" />
     <title>Menu</title>
   </head>
   <body>
     <div class="menu">
       <div class="navigation">
-        <div class="menu-expand">
-          <button data-toggle="collapse" data-target="#menu"><i class="fas fa-bars"></i></button>
+        <div class="logo">
+          <img src="images/logo.png" alt="logo" />
         </div>
 
-        <div class="annotation">
-          <button id="annotation-button" data-target="#annotation">
-          <i class="fas fa-comment-alt"></i>
-        </button>
+        <div class="menu-expand">
+          <button data-toggle="collapse" data-target="#menu">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
 
+        <!-- <div class="annotation">
+          <button id="annotation-button" data-target="#annotation">
+            <i class="fas fa-comment-alt"></i>
+          </button>
+        </div> -->
+        <div class="user">
+          <button id="login-button" data-target="#login">
+            <i class="far fa-user"></i>
+          </button>
         </div>
         <div class="basket">
           <button id="basket" data-target="#order">
-          <i class="fas fa-shopping-basket"></i>
-        </button>
-
+            <i class="fas fa-shopping-basket"></i>
+          </button>
         </div>
       </div>
       <div class="menu-card">
@@ -1204,7 +1217,8 @@
           </div>
           <div class="alergens">
             <button data-target="#alergens" class="collapsible">
-              <i class="fas fa-chevron-right"></i>Lista alergenów znajduje się tutaj
+              <i class="fas fa-chevron-right"></i>Lista alergenów znajduje się
+              tutaj
             </button>
             <div id="alergens" class="hidden">
               <h3>Alergeny w produktach</h3>
@@ -1257,82 +1271,218 @@
         <div class="close">
           <button>
             <i class="fas fa-times"></i>
-
           </button>
         </div>
         <div class="container">
-        <h3>Twoje zamówienie</h3>
-        <div class="order-items">
-          <div class="order-item">
-            <div class="name"><span>Hawai</span></div>
-            <div class="times">
-              <i class="fas fa-times"></i>
-              <div class="count"><span>2</span></div>
+          <h3>Twoje zamówienie</h3>
+          <div class="order-items">
+            <div class="order-item">
+              <div class="name"><span>Hawai</span></div>
+              <div class="times">
+                <i class="fas fa-times"></i>
+                <div class="count"><span>2</span></div>
+              </div>
+              <div class="edit">
+                <button>
+                  <i class="fas fa-edit"></i>
+                </button>
+                <button>
+                  <i class="fas fa-times-circle"></i>
+                </button>
+              </div>
+              <div class="value"><span>37.80 zł</span></div>
             </div>
-            <div class="edit">
-              <button>
-                <i class="fas fa-edit"></i>
-              </button>
-              <button>
-                <i class="fas fa-times-circle"></i>
-              </button>
+            <div class="order-item">
+              <div class="name"><span>Margherita</span></div>
+              <div class="times">
+                <i class="fas fa-times"></i>
+                <div class="count"><span>2</span></div>
+              </div>
+              <div class="edit">
+                <button>
+                  <i class="fas fa-edit"></i>
+                </button>
+                <button>
+                  <i class="fas fa-times-circle"></i>
+                </button>
+              </div>
+              <div class="value"><span>33.80 zł</span></div>
             </div>
-            <div class="value"><span>37.80 zł</span></div>
           </div>
-          <div class="order-item">
-            <div class="name"><span>Margherita</span></div>
-            <div class="times">
-              <i class="fas fa-times"></i>
-              <div class="count"><span>2</span></div>
+          <div class="summary">
+            <p class="total">Zamówienie razem: <span>71.60 zł</span></p>
+            <p class="discount">Rabat: <span>0.00 zł</span></p>
+            <p class="total-to-pay">Razem do zapłaty: <span>71.60 zł</span></p>
+            <div class="order-button">
+              <button class="save">Zamawiam</button>
             </div>
-            <div class="edit">
-              <button>
-                <i class="fas fa-edit"></i>
-              </button>
-              <button>
-                <i class="fas fa-times-circle"></i>
-              </button>
-            </div>
-            <div class="value"><span>33.80 zł</span></div>
-          </div>
-        </div>
-        <div class="summary">
-          <p class="total">Zamówienie razem: <span>71.60 zł</span></p>
-          <p class="discount">Rabat: <span>0.00 zł</span></p>
-          <p class="total-to-pay">
-            Razem do zapłaty: <span>71.60 zł</span>
-          </p>
-          <div class="order-button">
-            <button class="save">Zamawiam</button>
           </div>
         </div>
       </div>
-      </div>
-      <div id="annotation" class="annotations">
+      <div id="login" class="login">
         <div class="close">
           <button>
             <i class="fas fa-times"></i>
-
           </button>
         </div>
         <div class="container">
-        <h3>Uwagi do zamówienia</h3>
-        <div class="content">
-          <textarea name="notes" id="notes" cols="30" rows="10">
+          <form action="">
+            <h3>Zaloguj się</h3>
+            <div class="content">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input
+                  class="form-control"
+                  type="email"
+                  name="email"
+                  id="email"
+                />
+              </div>
+              <div class="form-group">
+                <label for="password">Hasło</label>
+                <input
+                  class="form-control"
+                  type="password"
+                  name="password"
+                  id="password"
+                />
+              </div>
+            </div>
+            <div class="buttons">
+              <button class="cancel">Anuluj</button>
+              <input class="save" type="submit" value="Zaloguj" />
+              <a class="remind" href="#">Przypomnij hasło</a>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div id="customize-pizza" class="modal">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="customize-pizza">
+              <div class="modal-header">
+                <div class="header">
+                  <h3 class="name">Margherita</h3>
+                </div>
+                <button
+                  type="button"
+                  class="close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="body">
+                <div class="size">
+                  <button class="size-button active">30 cm</button>
+                  <button class="size-button">45 cm</button>
+                  <button class="size-button">60 cm</button>
+                </div>
+                <div id="accordion" class="categories accordion">
+                  <div class="category">
+                    <button
+                      class="category-button"
+                      data-toggle="collapse"
+                      data-target="#default"
+                    >
+                      <i class="fas fa-chevron-right"></i>Domyślne<small
+                        >(min: 0, max: 15: wybrano: 2)</small
+                      >
+                    </button>
+                    <div
+                      id="default"
+                      class="addons collapse show"
+                      data-parent="#accordion"
+                    >
+                      <div class="addon">
+                        <span class="count">1</span>
+                        <i class="fas fa-times"></i>
+                        <span class="name">Pieczarki</span>
+                        <div class="edit">
+                          <button class="minus">
+                            <i class="fas fa-minus"></i>
+                          </button>
+                          <button class="plus">
+                            <i class="fas fa-plus"></i>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="category">
+                    <button
+                      class="category-button active"
+                      data-toggle="collapse"
+                      data-target="#meat"
+                    >
+                      <i class="fas fa-chevron-right"></i>Mięso<small
+                        >(min: 0, max: 15: wybrano: 2)</small
+                      >
+                    </button>
 
-          </textarea>
-        </div>
-        <div class="save-button">
-          <button class="save">
-            Zapisz
-          </button>
+                    <div
+                      id="meat"
+                      class="addons collapse"
+                      data-parent="#accordion"
+                    >
+                      <div class="addon">
+                        <span class="count">0</span>
+                        <i class="fas fa-times"></i>
+                        <span class="name">Kurczak</span>
+                        <div class="edit">
+                          <button class="minus">
+                            <i class="fas fa-minus"></i>
+                          </button>
+                          <button class="plus">
+                            <i class="fas fa-plus"></i>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="footer">
+                <div class="changes-summary">
+                  <span class="changes">+ 2 x Ser Wędzony</span>
+                </div>
+                <div class="price-summary">
+                  <p>Razem: <span class="value">18.00</span> zł</p>
+                </div>
+                <div class="amount">
+                  <button><i class="fas fa-plus"></i></button>
+                  <input type="number" value="1" min="1" />
+                  <button><i class="fas fa-minus"></i></button>
+                </div>
+                <div class="buttons">
+                  <button class="cancel">Anuluj</button>
+                  <button class="save">Dodaj do koszyka</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      </div>
+    </div>
+
     <script src="fontawesome-free-5.13.0-web/js/all.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/site.js"></script>
   </body>
 </html>
