fix displaying images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <div class="navigation">
           <div class="wrapper">
             <div class="logo">
-              <img src="images/logo.png" alt="logo" />
+              <a href="#">
+                <img src="images/logo.png" alt="logo" />
+              </a>
             </div>
             <div class="menu-expand">
               <button data-toggle="collapse" data-target="#menu">
@@ -27,7 +29,23 @@
             </div>
 
             <div class="title">
+              <div class="dec-1">
+                <svg style="width: 24px; height: 24px;" viewBox="0 0 24 24">
+                  <path
+                    fill="currentColor"
+                    d="M17,8C8,10 5.9,16.17 3.82,21.34L5.71,22L6.66,19.7C7.14,19.87 7.64,20 8,20C19,20 22,3 22,3C21,5 14,5.25 9,6.25C4,7.25 2,11.5 2,13.5C2,15.5 3.75,17.25 3.75,17.25C7,8 17,8 17,8Z"
+                  />
+                </svg>
+              </div>
               <h1>Prawdziwa włoska kuchnia</h1>
+              <div class="dec-2">
+                <svg style="width: 24px; height: 24px;" viewBox="0 0 24 24">
+                  <path
+                    fill="currentColor"
+                    d="M17,8C8,10 5.9,16.17 3.82,21.34L5.71,22L6.66,19.7C7.14,19.87 7.64,20 8,20C19,20 22,3 22,3C21,5 14,5.25 9,6.25C4,7.25 2,11.5 2,13.5C2,15.5 3.75,17.25 3.75,17.25C7,8 17,8 17,8Z"
+                  />
+                </svg>
+              </div>
             </div>
             <div class="icons">
               <div class="user">
@@ -174,7 +192,11 @@
                       <div class="content">
                         <div class="info">
                           <div class="name">
-                            <p>Tatar z polędwicy wołowej</p>
+                            <p>
+                              Tatar z polędwicy wołowej
+                              <sup class="alergen">A</sup>
+                              <sup class="alergen">B</sup>
+                            </p>
                           </div>
                           <div class="details">
                             <small>z klasycznymi dodatkami i pieczywem</small>
