add roundend border in pizza customization

--- a/index.html
+++ b/index.html
@@ -2457,7 +2457,7 @@
                     >
                       <i class="fas fa-plus"></i>
                     </button>
-                    <input id="amount" type="number" value="1" min="1" />
+                    <span id="amount">1</span>
                     <button
                       class="remove"
                       data-target="#amount"
