change ad font size

--- a/index.html
+++ b/index.html
@@ -261,17 +261,21 @@
                                 <i class="fas fa-shopping-cart"></i>
                               </button>
                               <button class="remove">
-                                <i class="far fa-minus-square"></i>
+                                <!-- <i class="far fa-minus-square"></i>
+                                 -->
+                                <img src="images/edit/kosz.png" alt="kosz" />
                               </button>
                             </div>
                           </div>
                           <div class="count">
                             <button class="remove">
-                              <i class="fas fa-minus"></i>
+                              <!-- <i class="fas fa-minus"></i> -->
+                              <img src="images/edit/usun.png" alt="minus" />
                             </button>
                             <span class="count">0</span>
                             <button class="add">
-                              <i class="fas fa-plus"></i>
+                              <!-- <i class="fas fa-plus"></i> -->
+                              <img src="images/edit/dodaj.png" alt="plus" />
                             </button>
                           </div>
                         </div>
@@ -307,17 +311,21 @@
                                 <i class="fas fa-shopping-cart"></i>
                               </button>
                               <button class="remove">
-                                <i class="far fa-minus-square"></i>
+                                <!-- <i class="far fa-minus-square"></i>
+                                 -->
+                                <img src="images/edit/kosz.png" alt="kosz" />
                               </button>
                             </div>
                           </div>
                           <div class="count">
                             <button class="remove">
-                              <i class="fas fa-minus"></i>
+                              <!-- <i class="fas fa-minus"></i> -->
+                              <img src="images/edit/usun.png" alt="minus" />
                             </button>
                             <span class="count">0</span>
                             <button class="add">
-                              <i class="fas fa-plus"></i>
+                              <!-- <i class="fas fa-plus"></i> -->
+                              <img src="images/edit/dodaj.png" alt="plus" />
                             </button>
                           </div>
                         </div>
