--- a/index.html
+++ b/index.html
@@ -2252,6 +2252,115 @@
             </div>
           </div>
         </div>
+        <div id="order" class="order">
+          <div class="wrapper">
+            <div class="close">
+              <button>
+                <i class="fas fa-times"></i>
+              </button>
+            </div>
+            <div class="container">
+              <h3>Twoje zamówienie</h3>
+              <div class="order-items">
+                <div class="order-item">
+                  <div class="basic">
+                    <span class="name">
+                      Hawai
+                    </span>
+                    <div class="edit">
+                      <button class="remove">
+                        <img src="images/edit/usun.png" alt="usun" />
+                      </button>
+                      <span class="count">1</span>
+                      <button class="add">
+                        <img src="images/edit/dodaj.png" alt="dodaj" />
+                      </button>
+                    </div>
+                  </div>
+                  <div class="details">
+                    <div class="detail">
+                      <span class="name">
+                        Cena podstawowa
+                      </span>
+                      <span class="price">
+                        25.00 zł
+                      </span>
+                    </div>
+                    <div class="detail">
+                      <span class="name">
+                        + 1 Sos pomidorowy łagodny
+                      </span>
+                      <span class="price">
+                        5.00 zł
+                      </span>
+                    </div>
+                  </div>
+                  <div class="summary">
+                    <p>
+                      Podsumowanie:
+                      <span class="item-price">
+                        30.00 zł
+                      </span>
+                    </p>
+                  </div>
+                </div>
+                <div class="order-item">
+                  <div class="basic">
+                    <span class="name">
+                      Hawai
+                    </span>
+                    <div class="edit">
+                      <button class="remove">
+                        <img src="images/edit/usun.png" alt="usun" />
+                      </button>
+                      <span class="count">1</span>
+                      <button class="add">
+                        <img src="images/edit/dodaj.png" alt="dodaj" />
+                      </button>
+                    </div>
+                  </div>
+                  <div class="details">
+                    <div class="detail">
+                      <span class="name">
+                        Cena podstawowa
+                      </span>
+                      <span class="price">
+                        25.00 zł
+                      </span>
+                    </div>
+                    <div class="detail">
+                      <span class="name">
+                        + 1 Sos pomidorowy łagodny
+                      </span>
+                      <span class="price">
+                        5.00 zł
+                      </span>
+                    </div>
+                  </div>
+                  <div class="summary">
+                    <p>
+                      Podsumowanie:
+                      <span class="item-price">
+                        30.00 zł
+                      </span>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="summary">
+                <p class="total">Zamówienie razem: <span>71.60 zł</span></p>
+                <p class="discount">Rabat: <span>0.00 zł</span></p>
+                <p class="total-to-pay">
+                  Razem do zapłaty: <span>71.60 zł</span>
+                </p>
+                <div class="order-button">
+                  <button class="back">Wróć do menu</button>
+                  <button class="save">Zamawiam</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div id="login" class="login">
           <div class="wrapper">
             <div class="container">
