smaller background-size

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles/css/style.css" />
+    <link rel="stylesheet" href="styles/css/style-light.css" />
     <title>Menu</title>
   </head>
   <body>
